--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
 serde = ">=1.0.27"
 serde_derive = ">=1.0.27"
 bincode = "1.2.1"
-versionize_derive = { git = "https://github.com/firecracker-microvm/versionize_derive" }
+versionize_derive = { git = "https://github.com/firecracker-microvm/versionize_derive", tag = "v0.1.0" }
 crc64 = "1.0.0"
 vm-memory = { version = ">=0.2.0" }
 vmm-sys-util = ">=0.4.0"
@@ -17,4 +17,4 @@ vmm-sys-util = ">=0.4.0"
 proc-macro2 = ">=1.0"
 quote = ">=1.0"
 syn = { version = ">=1.0.13", features=["default","full"]}
-versionize_derive = { git = "https://github.com/firecracker-microvm/versionize_derive" }
+versionize_derive = { git = "https://github.com/firecracker-microvm/versionize_derive", tag = "v0.1.0" }
