--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,17 @@ name = "versionize"
 version = "0.1.1"
 license = "Apache-2.0"
 authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
+description = "A version tolerant serialization/deserialization framework."
+readme = "README.md"
+repository = "https://github.com/firecracker-microvm/versionize"
+keywords = ["serialization", "version"]
+categories = ["encoding"]
 
 [dependencies]
 serde = ">=1.0.27"
 serde_derive = ">=1.0.27"
 bincode = "1.2.1"
-versionize_derive = { git = "https://github.com/firecracker-microvm/versionize_derive", tag = "v0.1.0" }
+versionize_derive = ">=0.1.1"
 crc64 = "1.0.0"
 vm-memory = { version = ">=0.2.0" }
 vmm-sys-util = ">=0.4.0"
@@ -17,4 +22,3 @@ vmm-sys-util = ">=0.4.0"
 proc-macro2 = ">=1.0"
 quote = ">=1.0"
 syn = { version = ">=1.0.13", features=["default","full"]}
-versionize_derive = { git = "https://github.com/firecracker-microvm/versionize_derive", tag = "v0.1.0" }
