--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "versionize"
-version = "0.1.3"
+version = "0.1.4"
 license = "Apache-2.0"
 authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
 description = "A version tolerant serialization/deserialization framework."
@@ -13,7 +13,7 @@ categories = ["encoding"]
 serde = ">=1.0.27"
 serde_derive = ">=1.0.27"
 bincode = "1.2.1"
-versionize_derive = ">=0.1.2"
+versionize_derive = ">=0.1.3"
 crc64 = "1.0.0"
 vmm-sys-util = ">=0.4.0"
 
@@ -21,3 +21,6 @@ vmm-sys-util = ">=0.4.0"
 proc-macro2 = ">=1.0"
 quote = ">=1.0"
 syn = { version = ">=1.0.13", features=["default","full"]}
+
+[badges]
+maintenance = { status = "experimental" }
