--- a/coverage_config_x86_64.json
+++ b/coverage_config_x86_64.json
@@ -1,1 +1,1 @@
-{"coverage_score": 93.2, "exclude_path": "", "crate_features": ""}
+{"coverage_score": 95.4, "exclude_path": "test", "crate_features": ""}
