--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,17 +10,17 @@ keywords = ["serialization", "version"]
 categories = ["encoding"]
 
 [dependencies]
-serde = ">=1.0.27"
-serde_derive = ">=1.0.27"
+serde = "1.0.27"
+serde_derive = "1.0.27"
 bincode = "1.2.1"
-versionize_derive = ">=0.1.3"
+versionize_derive = "0.1.4"
 crc64 = "1.0.0"
-vmm-sys-util = ">=0.8.0"
+vmm-sys-util = "0.11.0"
 
 [build-dependencies]
-proc-macro2 = ">=1.0"
-quote = ">=1.0"
-syn = { version = ">=1.0.13", features=["default","full"]}
+proc-macro2 = "1.0"
+quote = "1.0"
+syn = { version = "1.0.13", features=["default","full"]}
 
 [badges]
 maintenance = { status = "experimental" }
