--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ keywords = ["serialization", "version"]
 categories = ["encoding"]
 
 [dependencies]
+semver = "1.0.16"
 serde = "1.0.27"
 serde_derive = "1.0.27"
 bincode = "1.2.1"
@@ -21,6 +22,10 @@ vmm-sys-util = "0.11.0"
 proc-macro2 = "1.0"
 quote = "1.0"
 syn = { version = "1.0.13", features=["default","full"]}
+
+[dev-dependencies]
+byteorder = "1.4.3"
+versionize_derive = "0.1.4"
 
 [badges]
 maintenance = { status = "experimental" }
